src/objects/Translation__c.object
<CustomObject>
    <fields>
        <fullName>Atom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Atom</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Participation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Translation_Forms_Access__c</fullName>
        <label>Translation (Forms Access)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Translation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Web_Resource_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web Resource Link</label>
        <referenceTo>Web_Resource_Link__c</referenceTo>
        <relationshipLabel>Translations</relationshipLabel>
        <relationshipName>Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Participation__c</columns>
        <columns>Atom__c</columns>
        <columns>Language__c</columns>
        <columns>Product__c</columns>
        <columns>Translation__c</columns>
        <columns>Web_Resource_Link__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applications_with_Translations</fullName>
        <columns>NAME</columns>
        <columns>Participation__c</columns>
        <columns>Language__c</columns>
        <columns>Translation__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Participation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Applications with Translations</label>
    </listViews>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <description>Translations for the Application (Participation__c)</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Issue</fullName>
        <active>false</active>
        <description>Translations for the Issue</description>
        <label>Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>false</active>
        <description>Translations for the Product</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulation</fullName>
        <active>false</active>
        <description>Translations for the Regulation</description>
        <label>Regulation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>